set(planner_srcs
  common/snapshot.cpp
  common/utils.cpp
  common/vehicle_path.cpp
  idm_lattice_planner/traffic_simulator.cpp
  idm_lattice_planner/idm_lattice_planner.cpp
)

add_library(planning_algos
  ${planner_srcs}
)
target_link_libraries(planning_algos
  routing_algos
  ${Carla_LIBRARIES}
  ${Boost_LIBRARIES}
  ${PCL_LIBRARIES}
)
add_dependencies(planning_algos
  routing_algos
)
